# extract-audio

./: .dockerignore  .gitignore  .goreleaser.yaml  Cargo.toml  Cross.toml  README.md  justfile  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build-and-release.yml  build.yml  ci.yml  win-aarch64.yml  win-x86_64.yml
dockerfiles/: Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.x86_64-unknown-linux-gnu
src/: main.rs
