[package]
name = "extract-audio"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }

polars = { version = "0.46.0", features = ["full"] }

parquet = { version = "55" }
arrow = { version = "55" }

tempfile = "3"

rayon = { version = "1.10.0" }

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false
