[package]
name = "extract-audio"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }

polars = { version = "0.50.0", features = ["full"] }

parquet = { version = "56" }
arrow = { version = "56" }

tempfile = "3"

rayon = { version = "1.11.0" }

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false
